--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <div class="column">
           <div class="column-2 bg-light">
             <h2>Request Callback</h2>
-            <form action="" class="callback-form" name="contact" netlify>
+            <form class="callback-form" action="https://formspree.io/f/xrbzgrvy" method="POST">
               <div class="form-cont">
                 <label for="name"></label>
                 <input type="text" name="name" id="name" placeholder="Enter name">
