--- a/index.html
+++ b/index.html
@@ -207,20 +207,17 @@
         <div class="column">
           <div class="column-2 bg-light">
             <h2>Request Callback</h2>
-            <form class="callback-form" action="https://formspree.io/f/xrbzgrvy" method="POST">
+            <form action="https://formspree.io/f/xrbzgrvy" class="callback-form" method="POST">
               <div class="form-cont">
-                <label for="name"></label>
-                <input type="text" name="name" id="name" placeholder="Enter name">
+                <input type="text" name="name" placeholder="Enter name">
               </div>
               <div class="form-cont">
-                <label for="email"></label>
-                <input type="email" name="email" id="email" placeholder="Enter email">
+                <input type="email" name="email" placeholder="Enter email">
               </div>
               <div class="form-cont">
-                <label for="phone"></label>
-                <input type="text" name="phone" id="phone" placeholder="Enter phone">
+                <input type="text" name="phone" placeholder="Enter phone">
               </div>
-              <input type="submit" value="send" id="submit" class="btn">
+              <button type="submit" class="btn">Send Message</Button>
             </form>
           </div>
         </div>
