--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 <input type="email" name="email" placeholder="Enter email">
               </div>
               <div class="form-cont">
-                <input type="text" name="phone" placeholder="Enter phone">
+                <textarea type="text" name="message" placeholder="Enter Message"></textarea>
               </div>
               <button type="submit" class="btn">Send Message</Button>
             </form>
