--- a/index.html
+++ b/index.html
@@ -207,18 +207,14 @@
         <div class="column">
           <div class="column-2 bg-light">
             <h2>Request Callback</h2>
-            <form action="https://formspree.io/f/xrbzgrvy" class="callback-form" method="POST">
-              <div class="form-cont">
-                <input type="text" name="name" placeholder="Enter name">
-              </div>
-              <div class="form-cont">
-                <input type="email" name="email" placeholder="Enter email">
-              </div>
-              <div class="form-cont">
-                <textarea type="text" name="message" placeholder="Enter Message"></textarea>
-              </div>
+
+            <form action="https://formspree.io/f/xrbzgrvy" method="POST">
+              <input type="text" name="name" placeholder="Enter name">
+              <input type="email" name="email" placeholder="Enter email">
+              <textarea type="text" name="message" placeholder="Enter Message"></textarea>
               <button type="submit" class="btn">Send Message</Button>
             </form>
+
           </div>
         </div>
       </div>
