--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
               <input type="text" name="name" placeholder="Enter name">
               <input type="email" name="email" placeholder="Enter email">
               <textarea type="text" name="message" placeholder="Enter Message"></textarea>
-              <button type="submit" class="btn">Send Message</Button>
+              <button type="submit" class="btn">Send Message</button>
             </form>
 
           </div>
